--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ fastlane/readme.md
 
 # SwiftPM binary artifacts
 .xcframework
+ 
+# Xcuserstate
+*.xcuserstate
 
 # Generated files
 #
@@ -53,7 +56,6 @@ fastlane/readme.md
 *.dSYM
 *.bcsymbolmap
 *.xcfilelist
-*.xcassets
 
 # Temporary and log files
 #
