--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ xcuserdata/
 *.lock
 *.moved-aside
 *.moved-aside*
+Issue Solver.xcodeproj/project.xcworkspace/xcuserdata/iradabakirli.xcuserdatad/UserInterfaceState.xcuserstate
