Revert "Merge remote-tracking branch 'origin/UI002_CreatingComponents&Views' into develop"
This reverts commit c4b8721a6497b9249e6f9591114bd4ac03a2a54d, reversing
changes made to df2ee0ac9f6346b98df02de8e7e9d41ef5475e2b.

--- a/.gitignore
+++ b/.gitignore
@@ -123,4 +123,4 @@ xcuserdata/
 *.lock
 *.moved-aside
 *.moved-aside*
-Issue Solver.xcodeproj/project.xcworkspace/xcuserdata/iradabakirli.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
